<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="3dp">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="edu.northeastern.cs5520.todo_adrienne.ToDoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ToDoFragment">

        <LinearLayout
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="20dp"
            android:background="?attr/colorControlHighlight"
            android:orientation="vertical"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewTitleHeader"
                style="@style/TextView.ToDoHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_heading" />

            <EditText
                android:id="@+id/editTextTodoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_title_hint"
                android:inputType="text|textCapSentences"
                android:text="@{viewmodel.adrienneTodoTitle}" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/todo_chunk_margin_top"
            android:background="?attr/colorControlHighlight"
            android:orientation="vertical"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutTitle">

            <TextView
                android:id="@+id/textViewDetailHeader"
                style="@style/TextView.ToDoHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_heading" />


            <EditText
                android:id="@+id/editTextTodoDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_details_hint"
                android:inputType="textLongMessage"
                android:lines="5"
                android:singleLine="false"
                android:text="@{viewmodel.todoDescription}" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutDeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/todo_chunk_margin_top"
            android:background="?attr/colorControlHighlight"
            android:orientation="vertical"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutDetails">

            <TextView
                android:id="@+id/textViewDateDeadlineHeader"
                style="@style/TextView.ToDoHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deadline_date_heading" />

            <TextView
                android:id="@+id/editTextTodoDeadlineDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_deadline_date_hint"
                android:inputType="date"
                android:text="@{viewmodel.todoDateAsString}" />

            <Button
                android:id="@+id/buttonChooseDate"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_date_button_text" />


            <TextView
                android:id="@+id/textViewTimeDeadlineHeader"
                style="@style/TextView.ToDoHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deadline_time_heading" />

            <TextView
                android:id="@+id/editTextTodoDeadlineTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_deadline_time_hint"
                android:inputType="time"
                android:text="@{viewmodel.todoTimeAsString}" />


            <Button
                android:id="@+id/buttonChooseTime"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_time_button_text" />


        </LinearLayout>

        <TextView
            android:id="@+id/textViewReminderHeader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/reminder_info_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutDeadline" />

        <CheckedTextView
            android:id="@+id/checkedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_reminder_info_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReminderHeader" />

        <TextView
            android:id="@+id/textViewIsCompletedHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_completed_info_heading"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkedTextView" />

        <TextView
            android:id="@+id/textViewIsCompletedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_completed_info_placeholder"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewIsCompletedHeader" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/todo_edit_cancel_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewIsCompletedValue" />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="createTodo"
            android:text="@string/todo_edit_save_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/buttonCancel"
            app:layout_constraintTop_toBottomOf="@id/textViewIsCompletedValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>